styles: Fix overflowing div

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0px;
+    overflow-x: hidden;
 }
 
 body {
